Multi Language inside Post

--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -1,5 +1,6 @@
 {
   "read-more": "Read More",
   "published-at": "Published at:",
-  "blog-description": "Boilerplate for multilanguage Nuxt Blog using @nuxt/content + nuxt-i18n"
+  "blog-description": "Boilerplate for multilanguage Nuxt Blog using @nuxt/content + nuxt-i18n",
+  "also-available-in": "Also available in"
 }
