--- a/locales/fr-fr.json
+++ b/locales/fr-fr.json
@@ -1,5 +1,6 @@
 {
   "read-more": "En Savoir Plus",
   "published-at": "Publié à:",
-  "blog-description": "Boilerplate pour le blog multilingue utilisant @nuxt/content + nuxt-i18n"
+  "blog-description": "Boilerplate pour le blog multilingue utilisant @nuxt/content + nuxt-i18n",
+  "also-available-in": "Aussi disponible en"
 }
